#7419 fix foldout formatting breaks on narrow window

--- a/js/notebook/src/shared/style/beakerx.scss
+++ b/js/notebook/src/shared/style/beakerx.scss
@@ -103,6 +103,7 @@ $focusColor: #66bb6a;
       height: auto;
       display: block;
       line-height: inherit;
+      flex-shrink: 0;
     }
   }
 
@@ -123,6 +124,7 @@ $focusColor: #66bb6a;
   .foldout-preview {
     font-size: 14px;
     line-height: 1.3em;
+    flex-shrink: 2;
     flex-grow: 1;
     text-indent: 0;
     transition: opacity 0.1s ease-in-out;
